--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,7 @@
 <!-- Page Title--><!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>About</title>
+    <title>Accul recrute</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,52 +13,19 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
-    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <div class="preloader">
       <div class="preloader-body"> 
         <div class="cssload-jumping"><span></span><span></span><span></span><span></span><span></span></div>
       </div>
-    </div><a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid.jpg" alt="" height="0"></a>
+    </div>
     <div class="page">
       <!-- Page Header-->
       <header class="section page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
           <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-static" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
-            <div class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle=".rd-navbar-collapse"><span></span></div>
-            <div class="rd-navbar-aside-outer rd-navbar-collapse">
-              <div class="rd-navbar-aside">
-                <div class="header-info">
-                  <ul class="list-inline list-inline-md">
-                    <li>
-                      <div class="unit unit-spacing-xs align-items-center">
-                        <div class="unit-left font-weight-bold">Free Call:</div>
-                        <div class="unit-body"><a href="tel:#">(073) 123-12-12</a></div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="unit unit-spacing-xs align-items-center">
-                        <div class="unit-left font-weight-bold">Opening Hours: </div>
-                        <div class="unit-body"> Mn-Fr: 10 am-8 pm</div>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-                <div class="social-block">
-                  <ul class="list-inline">
-                    <li><a class="icon fa-facebook" href="#"></a></li>
-                    <li><a class="icon fa-twitter" href="#"></a></li>
-                    <li><a class="icon fa-google-plus" href="#"></a></li>
-                    <li><a class="icon fa-vimeo" href="#"></a></li>
-                    <li><a class="icon fa-youtube" href="#"></a></li>
-                    <li><a class="icon fa-pinterest-p" href="#"></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
             <div class="rd-navbar-main-outer">
               <div class="rd-navbar-main">
                 <!-- RD Navbar Panel-->
@@ -66,19 +33,15 @@
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/logo-dark-main-257x84.png" alt="" width="257" height="84"/></a></div>
+                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/AcculLogo2.svg" alt="" width="257" height="84"/></a></div>
                 </div>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
                       </li>
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="about-us.html">About</a>
-                      </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Typography</a>
-                      </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">On recrute !</a>
                       </li>
                     </ul>
                   </div>
@@ -90,15 +53,7 @@
       </header>
       <section class="section-page-title" style="background-image: url(images/page-title-3-1920x305.jpg); background-size: cover;">
         <div class="container">
-          <h1 class="page-title">About</h1>
-        </div>
-      </section>
-      <section class="breadcrumbs-custom">
-        <div class="container">
-          <ul class="breadcrumbs-custom-path">
-            <li><a href="index.html">Home</a></li>
-            <li class="active">About</li>
-          </ul>
+          <h1 class="page-title">On recrute !</h1>
         </div>
       </section>
       <section class="section section-lg bg-default">
@@ -281,15 +236,13 @@
         <div class="container">
           <div class="row row-30 align-items-lg-center justify-content-lg-between">
             <div class="col-lg-2">
-              <div class="footer-brand"><a href="index.html"><img src="images/logo-dark-main-257x84.png" alt="" width="257" height="84"/></a></div>
+              <div class="footer-brand"><a href="index.html"><img src="images/AcculLogo2.svg" alt="" width="257" height="84"/></a></div>
             </div>
             <div class="col-lg-10">
               <div class="footer-nav">
                 <ul class="rd-navbar-nav">
                   <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a></li>
-                  <li class="rd-nav-item active"><a class="rd-nav-link" href="about-us.html">About</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Typography</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
+                  <li class="rd-nav-item active"><a class="rd-nav-link" href="about-us.html">On recrute !</a></li>
                 </ul>
               </div>
             </div>
@@ -298,7 +251,7 @@
       </footer>
       <section class="bg-gray-100 section-xs text-center">
         <div class="container">
-          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by <a href="https://www.templatemonster.com">TemplateMonster</a></p>
+          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by Accul de père en filst</p>
         </div>
       </section>
     </div>
