--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Page Title--><!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>Beauty Salon</title>
+    <title>Accul</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,52 +13,19 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
-    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <div class="preloader">
       <div class="preloader-body"> 
         <div class="cssload-jumping"><span></span><span></span><span></span><span></span><span></span></div>
       </div>
-    </div><a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid.jpg" alt="" height="0"></a>
+    </div>
     <div class="page">
       <!-- Page Header-->
       <header class="section page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
           <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-static" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
-            <div class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle=".rd-navbar-collapse"><span></span></div>
-            <div class="rd-navbar-aside-outer rd-navbar-collapse">
-              <div class="rd-navbar-aside">
-                <div class="header-info">
-                  <ul class="list-inline list-inline-md">
-                    <li>
-                      <div class="unit unit-spacing-xs align-items-center">
-                        <div class="unit-left font-weight-bold">Free Call:</div>
-                        <div class="unit-body"><a href="tel:#">(073) 123-12-12</a></div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="unit unit-spacing-xs align-items-center">
-                        <div class="unit-left font-weight-bold">Opening Hours: </div>
-                        <div class="unit-body"> Mn-Fr: 10 am-8 pm</div>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-                <div class="social-block">
-                  <ul class="list-inline">
-                    <li><a class="icon fa-facebook" href="#"></a></li>
-                    <li><a class="icon fa-twitter" href="#"></a></li>
-                    <li><a class="icon fa-google-plus" href="#"></a></li>
-                    <li><a class="icon fa-vimeo" href="#"></a></li>
-                    <li><a class="icon fa-youtube" href="#"></a></li>
-                    <li><a class="icon fa-pinterest-p" href="#"></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
             <div class="rd-navbar-main-outer">
               <div class="rd-navbar-main">
                 <!-- RD Navbar Panel-->
@@ -66,7 +33,7 @@
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/logo-dark-main-257x84.png" alt="" width="257" height="84"/></a></div>
+                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/AcculLogo2.svg" alt="" width="257" height="84"/></a></div>
                 </div>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
@@ -74,11 +41,7 @@
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About</a>
-                      </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Typography</a>
-                      </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">On recrute !</a>
                       </li>
                     </ul>
                   </div>
@@ -92,42 +55,42 @@
       <section class="section swiper-container swiper-slider swiper-slider-1 slider-scale-effect" data-loop="false" data-autoplay="5500" data-simulate-touch="false" data-slide-effect="fade">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-bg-1">
-            <div class="slide-bg swiper-white-filter" style="background-image: url(&quot;images/slide-1-1920x720.png&quot;)"></div>
+            <div class="slide-bg swiper-white-filter" style="background-image: url(&quot;images/robot.png&quot;)"></div>
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <div class="row">
                   <div class="col-sm-10 col-lg-8 col-xl-7">
                     <h1 class="heading-decorate" data-caption-animate="fadeInUp" data-caption-delay="100">Glory Beauty Salon<br><span class="divider"></span>Beauty as a gift
                     </h1>
-                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Glory Beauty Salon offers the latest and highest quality services for you and all your family members. We specialize in all beauty treatments and our team is fully professional and innovative, from makeup services to hairstyling.</p><a class="button button-primary" href="#" data-caption-animate="fadeInUp" data-caption-delay="450">Read more</a>
+                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Glory Beauty Salon offers the latest and highest quality services for you and all your family members. We specialize in all beauty treatments and our team is fully professional and innovative, from makeup services to hairstyling.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="swiper-slide slide-bg-2">
-            <div class="slide-bg swiper-white-filter" style="background-image: url(&quot;images/slide-2-1920x720.png&quot;)"></div>
+            <div class="slide-bg swiper-white-filter" style="background-image: url(&quot;images/image2.png&quot;)"></div>
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <div class="row">
                   <div class="col-md-10 col-lg-8 col-xl-7">
                     <h1 class="heading-decorate" data-caption-animate="fadeInUp" data-caption-delay="100">Experience the Best<br><span class="divider"></span>Beauty Services
                     </h1>
-                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">We offer a full range of hairdressing services for men and women, eyebrow and eyelash care, the services of make-up artists and stylists. Entrust your beauty to professionals who really care about your style and look!</p><a class="button button-primary" href="#" data-caption-animate="fadeInUp" data-caption-delay="450">Read more</a>
+                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">We offer a full range of hairdressing services for men and women, eyebrow and eyelash care, the services of make-up artists and stylists. Entrust your beauty to professionals who really care about your style and look!</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="swiper-slide slide-bg-3">
-            <div class="slide-bg swiper-white-filter" style="background-image: url(&quot;images/slide-3-1920x720.png&quot;)"></div>
+            <div class="slide-bg swiper-white-filter" style="background-image: url(&quot;images/space.png&quot;)"></div>
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <div class="row">
                   <div class="col-md-10 col-lg-8 col-xl-7">
                     <h1 class="heading-decorate" data-caption-animate="fadeInUp" data-caption-delay="100">Professional Beauty <br><span class="divider"></span>Care for Everyone
                     </h1>
-                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Our beauty salon treatments will help you relax after a long and stressful day. At Glory, you can pamper yourself and enjoy the benefits of professional and affordable beauty care. Enjoy your life with our high-quality beauty services.</p><a class="button button-primary" href="#" data-caption-animate="fadeInUp" data-caption-delay="450">Read more</a>
+                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Our beauty salon treatments will help you relax after a long and stressful day. At Glory, you can pamper yourself and enjoy the benefits of professional and affordable beauty care. Enjoy your life with our high-quality beauty services.</p>
                   </div>
                 </div>
               </div>
@@ -317,30 +280,18 @@
           </div>
         </div>
       </section>
-      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid-big.jpg" alt="" height="0"></a>
       <section class="section"></section>
-      <!--Please, add the data attribute data-key="YOUR_API_KEY" in order to insert your own API key for the Google map.-->
-      <!--Please note that YOUR_API_KEY should replaced with your key.-->
-      <!--Example: <div class="google-map-container" data-key="YOUR_API_KEY">-->
-      <div class="google-map-container" data-center="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-zoom="5" data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png" data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},{&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},{&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]">
-        <div class="google-map"></div>
-        <ul class="google-map-markers">
-          <li data-location="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-description="9870 St Vincent Place, Glasgow"></li>
-        </ul>
-      </div>
       <footer class="section bg-default section-xs-type-1 footer-minimal">
         <div class="container">
           <div class="row row-30 align-items-lg-center justify-content-lg-between">
             <div class="col-lg-2">
-              <div class="footer-brand"><a href="index.html"><img src="images/logo-dark-main-257x84.png" alt="" width="257" height="84"/></a></div>
+              <div class="footer-brand"><a href="index.html"><img src="images/AcculLogo2.svg" alt="" width="257" height="84"/></a></div>
             </div>
             <div class="col-lg-10">
               <div class="footer-nav">
                 <ul class="rd-navbar-nav">
                   <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Typography</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">On recrute !</a></li>
                 </ul>
               </div>
             </div>
@@ -349,7 +300,7 @@
       </footer>
       <section class="bg-gray-100 section-xs text-center">
         <div class="container">
-          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by <a href="https://www.templatemonster.com">TemplateMonster</a></p>
+          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. Design by Accul de père en filst</p>
         </div>
       </section>
     </div>
