--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
               <div class="container">
                 <div class="row">
                   <div class="col-sm-10 col-lg-8 col-xl-7">
-                    <h1 class="heading-decorate" data-caption-animate="fadeInUp" data-caption-delay="100">Glory Beauty Salon<br><span class="divider"></span>Beauty as a gift
+                    <h1 class="heading-decorate" data-caption-animate="fadeInUp" data-caption-delay="100">Votre RH va dire <br><span class="divider"></span>"Aaaaaah"
                     </h1>
-                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Glory Beauty Salon offers the latest and highest quality services for you and all your family members. We specialize in all beauty treatments and our team is fully professional and innovative, from makeup services to hairstyling.</p>
+                    <!-- <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Glory Beauty Salon offers the latest and highest quality services for you and all your family members. We specialize in all beauty treatments and our team is fully professional and innovative, from makeup services to hairstyling.</p> -->
                   </div>
                 </div>
               </div>
@@ -74,9 +74,9 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-10 col-lg-8 col-xl-7">
-                    <h1 class="heading-decorate" data-caption-animate="fadeInUp" data-caption-delay="100">Experience the Best<br><span class="divider"></span>Beauty Services
+                    <h1 class="heading-decorate" data-caption-animate="fadeInUp" data-caption-delay="100">accuL<br><span class="divider"></span>Des logiciels qui soulagent
                     </h1>
-                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">We offer a full range of hairdressing services for men and women, eyebrow and eyelash care, the services of make-up artists and stylists. Entrust your beauty to professionals who really care about your style and look!</p>
+                    <!-- <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">We offer a full range of hairdressing services for men and women, eyebrow and eyelash care, the services of make-up artists and stylists. Entrust your beauty to professionals who really care about your style and look!</p> -->
                   </div>
                 </div>
               </div>
@@ -88,9 +88,9 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-10 col-lg-8 col-xl-7">
-                    <h1 class="heading-decorate" data-caption-animate="fadeInUp" data-caption-delay="100">Professional Beauty <br><span class="divider"></span>Care for Everyone
+                    <h1 class="heading-decorate" data-caption-animate="fadeInUp" data-caption-delay="100">Surcharge occasionnelle ?<br><span class="divider"></span>Dites-le grâce au logiciel Poopoo Entretenu.
                     </h1>
-                    <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Our beauty salon treatments will help you relax after a long and stressful day. At Glory, you can pamper yourself and enjoy the benefits of professional and affordable beauty care. Enjoy your life with our high-quality beauty services.</p>
+                    <!-- <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Our beauty salon treatments will help you relax after a long and stressful day. At Glory, you can pamper yourself and enjoy the benefits of professional and affordable beauty care. Enjoy your life with our high-quality beauty services.</p> -->
                   </div>
                 </div>
               </div>
@@ -134,14 +134,13 @@
         <div class="container">
           <div class="row row-50 align-items-lg-center justify-content-xl-between">
             <div class="col-lg-6 text-center">
-              <div class="block-parallax-element"><span class="prev-element" data-parallax-scroll="{&quot;y&quot;: -30, &quot;x&quot;: 0,  &quot;smoothness&quot;: 50 }"></span><img src="images/home-1-378x463.jpg" alt="" width="378" height="463"/><span class="next-element" data-parallax-scroll="{&quot;y&quot;: 30, &quot;x&quot;: 0,  &quot;smoothness&quot;: 50 }"></span>
+              <div class="block-parallax-element"><span class="prev-element" data-parallax-scroll="{&quot;y&quot;: -30, &quot;x&quot;: 0,  &quot;smoothness&quot;: 50 }"></span><img src="images/essuie-classe.jpg" alt="" width="378" height="463"/><span class="next-element" data-parallax-scroll="{&quot;y&quot;: 30, &quot;x&quot;: 0,  &quot;smoothness&quot;: 50 }"></span>
               </div>
             </div>
             <div class="col-lg-6 col-xl-5">
-              <h2 class="heading-decorate">Why Our Clients <br><span class="divider"></span>Choose Us
-              </h2>
-              <p class="big text-gray-800">We are the leading beauty salon in LA providing high-quality hairdressing, makeup, and skin care services to everyone.</p>
-              <p class="text-spacing-60">Our clients appreciate and value our level of customer service, the skills of our stylists and estheticians as well as our professional approach to everything we do.</p><a class="button button-primary" href="#">learn more</a>
+              <h2 class="heading-decorate">Essuie-Classe<br><span class="divider"></span>Des essuie-glaces pour ceux qui ont la classe</h2>
+              <p class="big text-gray-800">Accul propose une gamme complète d'Essuie-Classe !</p>
+              <p class="text-spacing-60">Vous souhaitez que votre Robot Humanoïde puisse enfin voir à travers ses yeux de robot classe ? Les Essuie-Classe sont la solution ! Équipez-vous de la nouvelle version Essuie-Classe Master Tronique Equinox 2000 v2 dès maintenant grâce à AcculSoftware.</p>
             </div>
           </div>
         </div>
@@ -161,7 +160,7 @@
               <div class="box-images-classic">
                 <div class="row row-30">
                   <div class="col-6">
-                    <div class="box-image-item" data-parallax-scroll="{&quot;y&quot;: 0, &quot;x&quot;: -20,  &quot;smoothness&quot;: 30 }"><img src="images/services-1-270x458.jpg" alt="" width="270" height="458"/>
+                    <div class="box-image-item" data-parallax-scroll="{&quot;y&quot;: 0, &quot;x&quot;: -20,  &quot;smoothness&quot;: 30 }"><img src="images/fuca.jpg" alt="" width="270" height="458"/>
                     </div>
                   </div>
                   <div class="col-6">
