--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <h2 class="heading-decorate">A Variety of <br><span class="divider"></span>Beauty Services
                 </h2>
                 <p class="big text-gray-800">We offer a full range of salon treatments and styling services provided by a team of professional stylists, all in a clean air environment.</p>
-                <p>Our estheticians and stylists can make your hair look just the way you want. Be it a hair extension, coloring, or styling, we can do it all to make you look incredibly attractive.</p><a class="button button-primary" href="#">Book Now</a>
+                <p>Our estheticians and stylists can make your hair look just the way you want. Be it a hair extension, coloring, or styling, we can do it all to make you look incredibly attractive.</p>
               </div>
             </div>
             <div class="col-lg-6">
@@ -212,30 +212,8 @@
                     <p>Cosmetologist</p>
                   </div>
                 </div>
-                <div class="team-minimal">
-                  <figure><img src="images/team-5-370x370.jpg" alt="" width="370" height="370"></figure>
-                  <div class="team-minimal-caption">
-                    <h4 class="team-title"><a href="#">Ann Butler</a></h4>
-                    <p>Manicurist</p>
-                  </div>
-                </div>
-                <div class="team-minimal">
-                  <figure><img src="images/team-6-370x370.png" alt="" width="370" height="370"></figure>
-                  <div class="team-minimal-caption">
-                    <h4 class="team-title"><a href="#">Kate Wilson</a></h4>
-                    <p>Esthetician</p>
-                  </div>
-                </div>
-                <div class="team-minimal">
-                  <figure><img src="images/team-7-370x370.png" alt="" width="370" height="370"></figure>
-                  <div class="team-minimal-caption">
-                    <h4 class="team-title"><a href="#">Susan Robinson</a></h4>
-                    <p>Hair Colorist</p>
-                  </div>
-                </div>
               </div>
             </div>
-            <div class="col-12"><a class="button button-primary" href="#">View all team</a></div>
           </div>
         </div>
       </section>
