--- a/about-us.html
+++ b/about-us.html
@@ -39,9 +39,9 @@
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">On recrute !</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="about-us.html">On recrute !</a>
                       </li>
                     </ul>
                   </div>
@@ -69,13 +69,13 @@
               <div class="row row-30">
                 <div class="col-md-6">
                   <div class="box-contact-info-with-icon"><span class="icon mdi mdi-clock icon-primary"></span>
-                    <h5>Opening Hours</h5>
+                    <h5>Horaire d'ouverture :</h5>
                     <ul class="list-xs">
-                      <li> <span class="text-gray-800">Monday-Friday: </span> 8:00am–8:00pm
+                      <li> <span class="text-gray-800">Monday-Monday: </span> 8:00am–8:00am
                       </li>
-                      <li><span class="text-gray-800">Saturday:</span> 8:00am–6:00pm
+                      <li><span class="text-gray-800">Monday:</span> 8:00am–6:00pm
                       </li>
-                      <li><span class="text-gray-800">Sunday: </span> Closed
+                      <li><span class="text-gray-800">Monday: </span> Closed
                       </li>
                     </ul>
                   </div>
@@ -87,6 +87,15 @@
                       <li><span class="text-gray-800">Address: </span> Washington, USA 6036 Richmond hwy.,  VA, 2230
                       </li>
                       <li><span class="text-gray-800">Offices: </span> 284-290
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="box-contact-info-with-icon"><span class="icon mdi mdi-clock icon-primary"></span>
+                    <h5>Contactez-nous !</h5>
+                    <ul class="list-xs">
+                      <li><span class="text-gray-800">mail: </span> <a href="mailto:contact@acculsoftware.com">contact@acculsoftware.com</a>
                       </li>
                     </ul>
                   </div>
@@ -104,134 +113,6 @@
           </div>
         </div>
       </section>
-      <section class="section parallax-container" data-parallax-img="images/parallax-04-1920x1320.jpg">
-        <div class="parallax-content section-lg context-dark text-center section-filter-dark">
-          <div class="container">
-            <h2>Video Presentation </h2>
-            <div class="divider-lg"></div>
-            <p class="block-lg">In this video, our staff members tell about their work at Glory, how they achieve the best results for their clients every day and more. Click the Play button below to watch this presentation.</p>
-          </div>
-          <div class="container">
-            <div class="box-video-button" data-lightgallery="group"><a class="button-play" data-lightgallery="item" href="https://www.youtube.com/watch?v=m10Vl9TXpec"><span class="icon fa-play"></span></a></div>
-          </div>
-        </div>
-      </section>
-      <section class="section section-md bg-default text-center">
-        <div class="container">
-          <h2>Our Professional Team</h2>
-          <div class="divider-lg"></div>
-          <p class="block-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Vestibulum bibendum elit cursus dapibus maximus. Maecenas sapien urna, cursus ut turpis non, gravida vehicula nisl. </p>
-          <div class="row row-30">
-            <div class="col-12">
-              <!-- Owl Carousel-->
-              <div class="owl-carousel carousel-creative" data-items="1" data-lg-items="3" data-dots="true" data-nav="false" data-stage-padding="15" data-loop="true" data-autoplay="true" data-margin="30" data-mouse-drag="false">
-                <div class="team-minimal team-minimal-with-shadow">
-                  <figure><img src="images/team-4-370x370.jpg" alt="" width="370" height="370"></figure>
-                  <div class="team-minimal-caption">
-                    <h4 class="team-title"><a href="#">Candice Marshall</a></h4>
-                    <p>Cosmetologist</p>
-                  </div>
-                </div>
-                <div class="team-minimal team-minimal-with-shadow">
-                  <figure><img src="images/team-5-370x370.jpg" alt="" width="370" height="370"></figure>
-                  <div class="team-minimal-caption">
-                    <h4 class="team-title"><a href="#">Ann Smith</a></h4>
-                    <p>Visagiste</p>
-                  </div>
-                </div>
-                <div class="team-minimal team-minimal-with-shadow">
-                  <figure><img src="images/team-1-370x370.jpg" alt="" width="370" height="370"></figure>
-                  <div class="team-minimal-caption">
-                    <h4 class="team-title"><a href="#">Mary Lucas</a></h4>
-                    <p>Founder, Senior Hair Stylist</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12"><a class="button button-primary" href="#">View all team</a></div>
-          </div>
-        </div>
-      </section>
-      <section class="section section-lg bg-default">
-        <div class="container">
-          <div class="row row-50">
-            <div class="col-lg-6">
-              <div class="block-xs">
-                <h2 class="heading-decorate">Testimonials<br class="d-inline"><span class="divider"></span>of Our Clients</h2>
-                <p class="big text-gray-800">Thanks to our clients’ regular reviews, testimonials, and comments we are able to improve our salon.</p>
-                <p>Unlike other salons, we prefer to maintain a constant connection with our customers and receive feedback on every service, whether it’s a simple haircut or complex wedding makeup. If you’ve already visited Glory, feel free to contact us and send your testimonial.</p>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <!-- Owl Carousel-->
-              <div class="owl-carousel carousel-corporate" data-items="1" data-dots="true" data-nav="false" data-stage-padding="10px" data-loop="true" data-autoplay="true" data-margin="25px" data-mouse-drag="false">
-                <div class="quote-corporate">
-                  <div class="quote-header">
-                    <h4>Jennifer Moreno</h4>
-                    <p class="big">Client</p>
-                  </div>
-                  <div class="quote-body">
-                    <div class="quote-text">
-                      <p>I love my eyebrow design. I'm usually very picky about my eyebrows and not everyone can give me what I want. You are amazing. Thank you for the amazing job you’ve done, I’ll be recommending you to my friends from now on!</p>
-                    </div>
-                    <svg class="quote-body-mark" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="66px" height="49px" viewbox="0 0 66 49" enable-background="new 0 0 66 49" xml:space="preserve">
-                      <g></g>
-                      <path d="M36.903,49v-3.098c9.203-5.315,14.885-12.055,17.042-20.222c-2.335,1.524-4.459,2.288-6.37,2.288						c-3.186,0-5.875-1.29-8.071-3.876c-2.194-2.583-3.293-5.74-3.293-9.479c0-4.133,1.443-7.605,4.327-10.407						C43.425,1.405,46.973,0,51.185,0c4.213,0,7.735,1.784,10.566,5.352C64.585,8.919,66,13.359,66,18.669						c0,7.482-2.85,14.183-8.549,20.112C51.751,44.706,44.902,48.112,36.903,49z M0.69,49v-3.098						c9.205-5.315,14.887-12.055,17.044-20.222c-2.335,1.524-4.478,2.288-6.423,2.288c-3.152,0-5.823-1.29-8.02-3.876						C1.096,21.51,0,18.353,0,14.614c0-4.133,1.434-7.605,4.301-10.407C7.168,1.405,10.709,0,14.92,0c4.247,0,7.778,1.784,10.592,5.352						c2.814,3.567,4.223,8.007,4.223,13.317c0,7.482-2.843,14.183-8.524,20.112C15.53,44.706,8.69,48.112,0.69,49z"></path>
-                    </svg>
-                  </div>
-                  <div class="quote-image"><img src="images/home-1-10-90x90.jpg" alt="" width="90" height="90"/>
-                  </div>
-                </div>
-                <div class="quote-corporate">
-                  <div class="quote-header">
-                    <h4>Mary Matthews</h4>
-                    <p class="big">Client</p>
-                  </div>
-                  <div class="quote-body">
-                    <div class="quote-text">
-                      <p>Janette cut my hair and did partial highlights and my experience was excellent! She took her time doing my hair and I am very pleased with the results. If you are still looking where to have your hair cut the best way, head for Glory!</p>
-                    </div>
-                    <svg class="quote-body-mark" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="66px" height="49px" viewbox="0 0 66 49" enable-background="new 0 0 66 49" xml:space="preserve">
-                      <g></g>
-                      <path d="M36.903,49v-3.098c9.203-5.315,14.885-12.055,17.042-20.222c-2.335,1.524-4.459,2.288-6.37,2.288						c-3.186,0-5.875-1.29-8.071-3.876c-2.194-2.583-3.293-5.74-3.293-9.479c0-4.133,1.443-7.605,4.327-10.407						C43.425,1.405,46.973,0,51.185,0c4.213,0,7.735,1.784,10.566,5.352C64.585,8.919,66,13.359,66,18.669						c0,7.482-2.85,14.183-8.549,20.112C51.751,44.706,44.902,48.112,36.903,49z M0.69,49v-3.098						c9.205-5.315,14.887-12.055,17.044-20.222c-2.335,1.524-4.478,2.288-6.423,2.288c-3.152,0-5.823-1.29-8.02-3.876						C1.096,21.51,0,18.353,0,14.614c0-4.133,1.434-7.605,4.301-10.407C7.168,1.405,10.709,0,14.92,0c4.247,0,7.778,1.784,10.592,5.352						c2.814,3.567,4.223,8.007,4.223,13.317c0,7.482-2.843,14.183-8.524,20.112C15.53,44.706,8.69,48.112,0.69,49z"></path>
-                    </svg>
-                  </div>
-                  <div class="quote-image"><img src="images/home-1-11-90x90.jpg" alt="" width="90" height="90"/>
-                  </div>
-                </div>
-                <div class="quote-corporate">
-                  <div class="quote-header">
-                    <h4>Amanda Smith</h4>
-                    <p class="big">Client</p>
-                  </div>
-                  <div class="quote-body">
-                    <div class="quote-text">
-                      <p>Thank you for the first-rate beauty service! I am very happy with the outcome. I feel fortunate to have met someone with years of training in makeup who is also bright and knowledgeable enough to determine my perfect style.</p>
-                    </div>
-                    <svg class="quote-body-mark" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="66px" height="49px" viewbox="0 0 66 49" enable-background="new 0 0 66 49" xml:space="preserve">
-                      <g></g>
-                      <path d="M36.903,49v-3.098c9.203-5.315,14.885-12.055,17.042-20.222c-2.335,1.524-4.459,2.288-6.37,2.288						c-3.186,0-5.875-1.29-8.071-3.876c-2.194-2.583-3.293-5.74-3.293-9.479c0-4.133,1.443-7.605,4.327-10.407						C43.425,1.405,46.973,0,51.185,0c4.213,0,7.735,1.784,10.566,5.352C64.585,8.919,66,13.359,66,18.669						c0,7.482-2.85,14.183-8.549,20.112C51.751,44.706,44.902,48.112,36.903,49z M0.69,49v-3.098						c9.205-5.315,14.887-12.055,17.044-20.222c-2.335,1.524-4.478,2.288-6.423,2.288c-3.152,0-5.823-1.29-8.02-3.876						C1.096,21.51,0,18.353,0,14.614c0-4.133,1.434-7.605,4.301-10.407C7.168,1.405,10.709,0,14.92,0c4.247,0,7.778,1.784,10.592,5.352						c2.814,3.567,4.223,8.007,4.223,13.317c0,7.482-2.843,14.183-8.524,20.112C15.53,44.706,8.69,48.112,0.69,49z"></path>
-                    </svg>
-                  </div>
-                  <div class="quote-image"><img src="images/home-1-12-90x90.jpg" alt="" width="90" height="90"/>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid-big.jpg" alt="" height="0"></a>
-      <section class="section"></section>
-      <!--Please, add the data attribute data-key="YOUR_API_KEY" in order to insert your own API key for the Google map.-->
-      <!--Please note that YOUR_API_KEY should replaced with your key.-->
-      <!--Example: <div class="google-map-container" data-key="YOUR_API_KEY">-->
-      <div class="google-map-container" data-center="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-zoom="5" data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png" data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},{&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},{&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]">
-        <div class="google-map"></div>
-        <ul class="google-map-markers">
-          <li data-location="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-description="9870 St Vincent Place, Glasgow"></li>
-        </ul>
-      </div>
       <footer class="section bg-default section-xs-type-1 footer-minimal">
         <div class="container">
           <div class="row row-30 align-items-lg-center justify-content-lg-between">
